tools/tests/ui/fail/l1023.cnf
// Test file for error code: L1023
// Expected error: Invalid FINANCIAL-DECIMAL character in encoding -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-invalid".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
